--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/src/index.js",
   "bin": "dist/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/src/index.js"
   },
   "repository": {
     "url": "https://github.com/johurul-haque/write-module"
