--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ES2020",
+    "module": "Node16",
     "rootDir": "./",
     "outDir": "./dist",
     "removeComments": true,
