--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "next-dir",
   "version": "1.0.0",
-  "description": "CLI tool for quickly creating folder based routes in NextJs.",
+  "description": "CLI tool for quickly creating folder based routes in NextJs app router.",
   "type": "module",
   "main": "dist/src/index.js",
   "bin": "dist/src/index.js",
